# ict-engine-release

./: .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  Cargo.toml  DEBUG.md  LICENSE  README.md  README.zh-CN.md
.cargo/: config.toml
config/: auto_quant.env  factor_candidate_harness_presets.json  factor_hotplug.yaml  market_data_harness_presets.json  market_relationships.json  market_state_user_weights_template.json  promoted_canonical_setups.json  regime_confidence_assets_v1.csv
docs/: 2026-04-24-open-source-shakedown-handoff.md  2026-04-25-auto-quant-parallel-try-plan.md  2026-04-25-auto-quant-parallel-try-report.md  2026-04-25-auto-quant-seeded-strategy-backtest-report.md  2026-04-25-auto-quant-tomac-live-handoff-validation-plan.md  2026-04-25-auto-quant-tomac-live-handoff-validation-report.md  2026-04-25-auto-quant-tomac-material-ingestion-plan.md  2026-04-25-auto-quant-tomac-material-ranking-fix-plan.md  2026-04-25-auto-quant-tomac-seed-evidence-plan.md  2026-04-25-live-factor-evidence-validation-plan.md  2026-04-25-live-factor-evidence-validation-report.md  2026-04-26-auto-quant-bbn-prior-init-plan.md  2026-04-26-auto-quant-live-signals-plan.md  2026-04-26-ibkr-live-data-bridge-plan.md  2026-04-26-multi-exchange-data-source-integration-plan.md  2026-04-27-pda-factor-universe-plan.md  DEBUG.md  agent-first-runbook.md  anti-drift-skill-research-notes.md  architecture-boundaries.md  audit-2026-04-21-cross-surface-review.md  audit-2026-04-21-full-codebase-shakedown.md  auto-quant-ictengine-integration-guide.md  auto-quant-integration-plan.md  backend-path-audit.md  (+47 more)
(+1107 files in other folders)
