[package]
name = "ict-engine"
version = "0.1.2"
edition = "2021"
description = "ICT Expansion Trading Engine - Probability-based trading analysis"
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/Undermybelt/ict-engine-release"
authors = ["ICT Engine contributors"]
publish = false

[[example]]
name = "round2_tucker_snapshot"
path = "support/examples/round2_tucker_snapshot.rs"

[dependencies]
ndarray = "0.15"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
rayon = "1.6"
statrs = "0.16"
clap = { version = "4", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
anyhow = "1"
log = "0.4"
env_logger = "0.10"
rand = "0.8"
rand_distr = "0.4"
approx = "0.5"
csv = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
async-trait = "0.1"
futures = "0.3"
urlencoding = "2.1"
loopybayesnet = { git = "https://github.com/elinorbgr/loopybayesnet", rev = "4453893" }
redis = { version = "0.27", default-features = false, features = ["streams"] }

[dev-dependencies]
tempfile = "3"
